crates/zendriver-stealth/src/snapshots/zendriver_stealth__fingerprint__tests__uam_win32_chrome_120.snap
---
source: crates/zendriver-stealth/src/fingerprint.rs
expression: uam
---
{
  "brands": [
    {
      "brand": "Not_A Brand",
      "version": "8"
    },
    {
      "brand": "Chromium",
      "version": "120"
    },
    {
      "brand": "Google Chrome",
      "version": "120"
    }
  ],
  "fullVersionList": [
    {
      "brand": "Not_A Brand",
      "version": "8.0.0.0"
    },
    {
      "brand": "Chromium",
      "version": "120.0.6099.234"
    },
    {
      "brand": "Google Chrome",
      "version": "120.0.6099.234"
    }
  ],
  "platform": "Windows",
  "platformVersion": "15.0.0",
  "architecture": "x86",
  "bitness": "64",
  "wow64": false,
  "mobile": false,
  "model": ""
}
